# RASCII

./: .gitignore  .rustfmt.toml  Cargo.toml  INSTALL  LICENSE  LICENSE.md  README.md  TODO.md  TODOs.md  contributors.py  install.sh  lib.rs  shell.nix
pictures/: p.txt
rascii/: Cargo.toml  p.txt
src/: Corgo.toml  charset.rs  charsets.rs  image_renderer.rs  lib.rs  main.rs  renderer.rs
src/craiyon/: ai.rs  craiyon.rs  mod.rs
src/render/: image.rs  mod.rs
tests/: test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_9.txt
tests/Black&White/: test_1.txt  test_10.txt  test_11.txt  test_12.txt  test_3.txt  test_8.txt
