[package]
name = "rascii_art"
version = "0.4.4"
authors = [ "UTFeight", "RGBCube" ]
description = "Advanced ASCII Art Generator"
repository = "https://github.com/UTFeight/RASCII"
keywords = [ "ascii" ]
license = "MIT"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.3.0", features = [ "derive" ] }
image = "0.24.6"
unicode-segmentation = "1.10.1"

[[bin]]
name = "rascii"
path = "src/main.rs"
